openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: etroc-solder-inspection
  labels:
    app: etroc-solder-inspection
spec:
  selector:
    app: etroc-solder-inspection
  ports:
    - name: http
      port: 8080
      targetPort: 8080
