openshift/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: etroc-solder-inspection
  labels:
    app: etroc-solder-inspection
  annotations:
    haproxy.router.openshift.io/ip_whitelist: "0.0.0.0/0 ::/0"
spec:
  host: etroc-solder-inspection.app.cern.ch
  to:
    kind: Service
    name: etroc-solder-inspection
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
